created card page

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: sans-serif;
+  color: #333;
+}
+
+.steps {
+  width: 50rem;
+  margin: 10rem auto;
+  background-color: #c4c4c4;
+  padding: 1.2rem 3rem;
+}
+.numbers {
+  display: flex;
+  justify-content: space-between;
+
+}
+.numbers > div {
+  height: 40px;
+  aspect-ratio: 1;
+  background-color: #e7e7e7;
+}
+
+.msg {
+  text-align: center;
+}
+
+.btns {
+  text-align: center;
 }
