--- a/src/index.css
+++ b/src/index.css
@@ -8,20 +8,24 @@ body {
 }
 
 .steps {
-  width: 50rem;
+  width: 42rem;
   margin: 10rem auto;
   background-color: #c4c4c4;
   padding: 1.2rem 3rem;
 }
 .numbers {
   display: flex;
-  justify-content: space-between;
 
+  justify-content: space-between;
+  margin-bottom: 3.7rem;
 }
 .numbers > div {
   height: 40px;
   aspect-ratio: 1;
   background-color: #e7e7e7;
+  border-radius: 50%;
+  text-align: center ;
+  line-height: 2.5;
 }
 
 .msg {
@@ -30,4 +34,12 @@ body {
 
 .btns {
   text-align: center;
+}
+.btns button:not(:last-child) {
+  margin-right: 3rem;
+}
+
+.active {
+  background-color: #7950f2;
+  color: red;
 }
