wrapped up project

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,20 @@ body {
   background-color: #c4c4c4;
   padding: 1.2rem 3rem;
 }
+
+.btn-new {
+  position: absolute;
+  right: 2rem;
+  top: 2rem;
+  border: none;
+  background-color: inherit;
+  cursor: pointer;
+
+  font-size: 2rem;
+  font-weight: 200;
+  width: 3rem;
+  height: 3rem;
+}
 .numbers {
   display: flex;
 
